tests/baselines/reference/objectLiteralShorthandPropertiesAssignmentError.errors.txt
objectLiteralShorthandPropertiesAssignmentError.ts(4,43): error TS2353: Object literal may only specify known properties, and 'name' does not exist in type '{ b: string; id: number; }'.
objectLiteralShorthandPropertiesAssignmentError.ts(5,16): error TS7008: Member 'name' implicitly has an 'any' type.
objectLiteralShorthandPropertiesAssignmentError.ts(5,22): error TS7008: Member 'id' implicitly has an 'any' type.
objectLiteralShorthandPropertiesAssignmentError.ts(6,81): error TS2322: Type 'string' is not assignable to type 'number'.
objectLiteralShorthandPropertiesAssignmentError.ts(6,87): error TS2322: Type 'number' is not assignable to type 'string'.
objectLiteralShorthandPropertiesAssignmentError.ts(8,13): error TS2322: Type 'number' is not assignable to type 'boolean'.


==== objectLiteralShorthandPropertiesAssignmentError.ts (6 errors) ====
    var id: number = 10000;
    var name: string = "my name";
    
    var person: { b: string; id: number } = { name, id };  // error
                                              ~~~~
!!! error TS2353: Object literal may only specify known properties, and 'name' does not exist in type '{ b: string; id: number; }'.
    var person1: { name, id };  // ok
                   ~~~~
!!! error TS7008: Member 'name' implicitly has an 'any' type.
                         ~~
!!! error TS7008: Member 'id' implicitly has an 'any' type.
    function foo(name: string, id: number): { id: string, name: number } { return { name, id }; }  // error
                                                                                    ~~~~
!!! error TS2322: Type 'string' is not assignable to type 'number'.
!!! related TS6500 objectLiteralShorthandPropertiesAssignmentError.ts:6:55: The expected type comes from property 'name' which is declared here on type '{ id: string; name: number; }'
                                                                                          ~~
!!! error TS2322: Type 'number' is not assignable to type 'string'.
!!! related TS6500 objectLiteralShorthandPropertiesAssignmentError.ts:6:43: The expected type comes from property 'id' which is declared here on type '{ id: string; name: number; }'
    function bar(obj: { name: string; id: boolean }) { }
    bar({ name, id });  // error
                ~~
!!! error TS2322: Type 'number' is not assignable to type 'boolean'.
!!! related TS6500 objectLiteralShorthandPropertiesAssignmentError.ts:7:35: The expected type comes from property 'id' which is declared here on type '{ name: string; id: boolean; }'
    
    